# Glacier.ML

./: .gitignore  CMakeLists.txt  GrandCMakeLists.txt  LICENSE  LICENSE.txt  LinkedIn_posts.md  README.md  benchmarking_results.md  glacial_journal.md  ppt_photo.md  to-do.md  trial  version.cpp
.github/: CODEOWNERS
Benchmark_drivers/Classification_Models/: KNNClassifierDriver.cpp
Benchmark_drivers/Regression_Models/: KNNRegressorDriver.cpp  MultipleLinearRegressionDriver.cpp  SVMRegressorDriver.cpp
Benchmarking_results/Classifiers/KNNClassifier/: KNNClassifierExample.cpp  benchmark_result.md
Benchmarking_results/Classifiers/LogisticRegression/: Benchmarking_LogisticRegression.ipynb  LogisticRegressionExample.cpp  benchmarking_results.md
Benchmarking_results/Classifiers/SVMClassifier/: Benchmarking_SVMC.ipynb  SVMClassifierExample.cpp  benchmarking_result.md
Benchmarking_results/Regressors/KNNRegressor/: KNNRegressorBenchmark.cpp
Datasets/Classification_datasets/: 2target_classification_test.csv  2target_classification_train.csv  Diabetes_classification_test.csv  Diabetes_classification_train.csv  Diabetes_classification_validation.csv  LBC_classification_test.csv  LBC_classification_train.csv
Datasets/Regression_datasets/: california_housing_testing_dataset.csv  california_housing_training_dataset.csv  train_sample_1.csv
Datasets/credit_score_dataset/: cs-500.csv  cs-5000.csv  cs-50000.csv
Datasets/cs_datasets/: cs-1000.csv  cs-10000.csv  cs_val_2.csv
Datasets/mi_datasets/: mi_100.csv  mi_1000.csv  mi_10000.csv  mi_500.csv  mi_5000.csv  mi_val.csv
Examples/: KNNClassifierExample.cpp  LogisticRegressionExample.cpp  MultipleLinearRegressionExample.cpp  SVMClassifierExample.cpp  SimpleLinearRegressionExample.cpp
Examples/Classification_Models/: all_models_classifiers.cpp
Examples/Regression_Models/: KNNRegressorExample.cpp
Glacier/Models/: DecisionTreeClassifier.hpp  DecisionTreeRegressor.hpp  KNNClassifier.hpp  KNNRegressor.hpp  LogisticRegression.hpp  MultipleLinearRegression.hpp  SVMClassifierFlow.hpp  SVMRegressorFlow.hpp  SimpleLinearRegression.hpp
Glacier/Utils/: logs.hpp  utilities.hpp
KNNClassifier/: Benchmarking KNNC.ipynb  CMakeLists.txt  KNNClassifierExample.cpp  KNNClassifierFlow.h  KNNClassifierImplementation.cpp  benchmark_result.md  min_heap.hpp
KNNRegressor/: CMakeLists.txt  KNNRegressorExample.cpp  KNNRegressorFlow.h  KNNRegressorImplementation.cpp  min_heap.hpp
LogisticRegression/: CMakeLists.txt  LogisticRegressionExample.cpp  LogisticRegressionFlow.h  LogisticRegressionImplementation.cpp  LogisticRegressionREADME.md
LogisticRegression/datasets/: test_sample_1.csv  train_sample_1.csv
Model_README/: KNNClassifierREADME.md  KNNRegressorREADME.md  LogisticRegressionREADME.md  MLR_Theory.md  MultipleLinearRegressionREADME.md  SingleLinearRegressionREADME.md
MultipleLinearRegression/: CMakeLists.txt  MLR_Theory.md  MultipleLinearRegression.h  MultipleLinearRegressionExample.cpp  MultipleLinearRegressionFlow.h  MultipleLinearRegressionImplementation.cpp  test_sample_1.csv
Presentations/markdown_files_for_tables/: phase_1.md
SVMClassifier/: SVMCLassifierFlow.hpp  SVMClassifierImplementation.cpp
SVMRegressor/: SVMRegressorImplementation.cpp
SimpleLinearRegression/: CMakeLists.txt  SimpleLinearRegressionExample.cpp  SimpleLinearRegressionFlow.h  SimpleLinearRegressionImplementation.cpp  test_med.csv  train_med.csv
Simple_Linear_Redression/: testing.cpp  testing_slr.h  trying_slr.cpp
Simple_Linear_Regression/: SLR_theory.md
Utils/: logs.h  utilities.cpp  utilities.h
docs/: system_design.md
eigen-tutorial/: CMakeLists.txt  haha.cpp  tut1.cpp  tut2.cpp  tut3.cpp  tut4.cpp  tut5.cpp  tut6.cpp
include/Glacier/Models/: KNNClassifier.hpp  KNNRegressor.hpp  LogisticRegression.hpp  MultipleLinearRegression.hpp  SVMClassifier.hpp  SVMClassifierFlow.hpp  SVMRegressor.hpp  SVMRegressorFlow.hpp  SimpleLinearRegression.hpp
include/Glacier/Utils/: logs.hpp  utilities.hpp
src/Models/: KNNC_impl.cpp  KNNR_impl.cpp  LogR_impl.cpp  MLR_impl.cpp  SLR_impl.cpp  SVMC_impl.cpp  SVMR_impl.cpp
src/Models/KNNC/: KNNC_impl.cpp
src/Models/KNNR/: KNNR_impl.cpp
src/Models/LogR/: LogR_impl.cpp
src/Models/LogR/core/: LogRCore.hpp  LogRCore_impl.cpp
src/Models/SLR/: SLR_impl.cpp
src/Utils/: utilities.cpp
tests/LogR/: test_LogR.cpp
